syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "pkg/pb";
option java_multiple_files = true;
option java_package = "com.arpabet";
option java_outer_classname = "ExampleProtos";
option objc_class_prefix = "EP";

import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "sprint";
        version: "1.0";
        contact: {
            name: "sprint";
            url: "https://github.com/arpabet/sprint";
            email: "john@mailnite.com";
        };
    };
    schemes: HTTP;
    schemes: HTTPS;
    consumes: "application/json";
    consumes: "application/octet-stream";
    produces: "application/json";
    produces: "application/octet-stream";
};

package example;

//
//  Example service
//

service ExampleService {

    //
    // Gets status
    //
    rpc Status(StatusRequest) returns (StatusResponse) {
        option (google.api.http) = {
            get: "/api/v1/status"
        };
    }

}


message StatusRequest {
}


message StatusResponse {
    int64       nodeId = 1;
    int64       uptime = 2;         // running time in milliseconds since last restart
}
